--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "prost-js",
   "version": "1.0.0",
-  "description": "Next.js starter with Tailwind CSS",
+  "description": "Next.js starter with Tailwind UI",
   "scripts": {
     "dev": "next",
     "build": "next build",
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^2.1.0",
+    "@tailwindcss/ui": "^0.1.3",
     "autoprefixer": "^9.7.5",
     "tailwindcss": "^1.2.0"
   }
