--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "prost-js",
-  "version": "1.0.0",
-  "description": "Next.js starter with Tailwind UI",
+  "name": "prost-next",
+  "version": "2.0.0",
+  "description": "Next.js starter with TypeScript, Tailwind CSS, Framer Motion, and Splitbee",
   "scripts": {
     "dev": "cross-env NODE_OPTIONS='--inspect' next dev",
     "build": "next build",
     "export": "next export",
-    "start": "next start"
+    "start": "next start",
+    "lint": "next lint"
   },
   "repository": {
     "type": "git",
@@ -15,9 +16,10 @@
   "keywords": [
     "Starter",
     "Next.js",
+    "TypeScript",
     "Tailwind CSS",
     "Framer Motion",
-    "HappyKit"
+    "Splitbee"
   ],
   "author": "Pavel Fomchenkov",
   "license": "MIT",
@@ -26,17 +28,20 @@
   },
   "homepage": "https://github.com/nawok/prost#readme",
   "dependencies": {
-    "@happykit/analytics": "^1.0.1",
-    "framer-motion": "^2.9.4",
-    "next": "^10.0.0",
+    "@splitbee/web": "^0.2.4",
+    "framer-motion": "^4.1.17",
+    "next": "^11.0.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
   "devDependencies": {
-    "@tailwindcss/ui": "^0.6.2",
-    "@tailwindui/react": "^0.1.1",
-    "autoprefixer": "^9.8.6",
-    "cross-env": "^7.0.2",
-    "tailwindcss": "^1.9.6"
+    "@types/react": "^17.0.15",
+    "autoprefixer": "^10.3.1",
+    "cross-env": "^7.0.3",
+    "eslint": "^7.31.0",
+    "eslint-config-next": "^11.0.1",
+    "postcss": "^8.3.6",
+    "tailwindcss": "^2.2.7",
+    "typescript": "^4.3.5"
   }
 }
