Add Tailwind CSS plugin for Prettier

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "export": "next export",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "prettier -w . && next lint"
   },
   "repository": {
     "type": "git",
@@ -41,6 +41,8 @@
     "eslint": "^8.7.0",
     "eslint-config-next": "^12.0.8",
     "postcss": "^8.4.5",
+    "prettier": "^2.5.1",
+    "prettier-plugin-tailwindcss": "^0.1.3",
     "tailwindcss": "^3.0.16",
     "typescript": "^4.5.5"
   }
