--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "export": "next export",
     "start": "next start",
-    "lint": "prettier -w . && next lint"
+    "lint": "prettier -w ./src && next lint"
   },
   "repository": {
     "type": "git",
@@ -29,21 +29,22 @@
   "homepage": "https://github.com/nawok/prost#readme",
   "dependencies": {
     "@splitbee/web": "^0.3.0",
-    "framer-motion": "^6.2.1",
-    "next": "^12.0.8",
+    "framer-motion": "^6.2.8",
+    "next": "^12.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@types/react": "^17.0.38",
+    "@types/node": "^17.0.21",
+    "@types/react": "^17.0.39",
     "autoprefixer": "^10.4.2",
     "cross-env": "^7.0.3",
-    "eslint": "^8.7.0",
-    "eslint-config-next": "^12.0.8",
-    "postcss": "^8.4.5",
+    "eslint": "^8.10.0",
+    "eslint-config-next": "^12.1.0",
+    "postcss": "^8.4.7",
     "prettier": "^2.5.1",
-    "prettier-plugin-tailwindcss": "^0.1.3",
-    "tailwindcss": "^3.0.16",
+    "prettier-plugin-tailwindcss": "^0.1.8",
+    "tailwindcss": "^3.0.23",
     "typescript": "^4.5.5"
   }
 }
