--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "homepage": "https://github.com/nawok/prost#readme",
   "dependencies": {
+    "@next/font": "^13.0.0",
     "@splitbee/web": "^0.3.0",
     "framer-motion": "^7.2.0",
     "next": "^13.0.0",
